# emergence-lab

./: .gitignore  ARCHITECTURE_V1.md  LICENSE  README.md  RESEARCH_CHARTER.md  pyproject.toml
src/emergence_lab/engine/: __init__.py  execution.py  experiment_engine.py
src/emergence_lab/research/: __init__.py  conclusion.py  experiment.py  hypothesis.py  lineage.py  question.py
tests/: test_conclusion.py  test_experiment_engine.py  test_research_lineage.py
